--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "lucide-react": "^0.464.0",
     "mui": "^0.0.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
